[package]
name = "pocket-ark-hooks"
version = "0.1.0"
edition = "2021"
description = "DLL that patches portions of MAE to allow PocketArk to work"
repository = "https://github.com/PocketRelay/PocketArcHooks"
license = "MIT"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["Hooking"]

[lib]
crate-type = ["cdylib"]


[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
]
